--- a/Assessment/washoku.html
+++ b/Assessment/washoku.html
@@ -135,6 +135,8 @@
 
     </div>
 
+    <!--info found in https://www.justonecookbook.com/washoku/-->
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
 
